초대 수락, 거절 없앰